--- a/packages/zinzow/website/.env.secure.yaml
+++ b/packages/zinzow/website/.env.secure.yaml
@@ -22,3 +22,9 @@ secrets:
       - PASSWORD
       - HOST
       - PORT
+
+  ../test-auth:
+    prefix: true
+    vars:
+      - USERNAME
+      - PASSWORD
