--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ stages:
   - tag
   - analyze
   - deploy
+  - validate
 
 variables:
   DOCKER_HOST: tcp://docker:2375/
@@ -239,6 +240,16 @@ deploy:
   script:
     - if [ "$CI_COMMIT_BRANCH" = "$MASTER_BRANCH" ]; then nx affected -t deploy; else nx affected -t
       deploy -c development; fi
+  resource_group: single
+  rules:
+    - if: $CI_COMMIT_BRANCH == $MASTER_BRANCH
+    - if: $CI_COMMIT_BRANCH == $DEV_BRANCH
+
+lighthouse:
+  stage: validate
+  script:
+    - if [ "$CI_COMMIT_BRANCH" = "$MASTER_BRANCH" ]; then nx affected -t lighthouse; else nx
+      affected -t lighthouse -c development; fi
   resource_group: single
   rules:
     - if: $CI_COMMIT_BRANCH == $MASTER_BRANCH
