--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
         "inquirer": "^13.1.0",
         "jiti": "2.6.1",
         "jsdom": "~27.4.0",
+        "lighthouse": "^13.0.1",
         "nx": "22.3.3",
         "pino-pretty": "^13.1.3",
         "prettier": "^3.7.4",
