refactor(just-music-store): rename env vars and share file-watcher

--- a/packages/just/.env.secure.yaml
+++ b/packages/just/.env.secure.yaml
@@ -186,8 +186,9 @@ secrets:
   music/store:
     prefix: true
     vars:
-      - MUSIC_STORE_DIR
-      - MUSIC_LIB_DIRS
+      - STORE_DIR
+      - LIBS_DIRS
+      - LIBS
 
   nginx:
     prefix: true
