feat(just-music-marketplace): add core marketplace functionality

--- a/packages/just/nginx/conf/default.conf
+++ b/packages/just/nginx/conf/default.conf
@@ -257,22 +257,22 @@ server {
 }
 
 server {
-    set_by_lua_block $music_downloader_port { return os.getenv("MUSIC_DOWNLOADER_PORT"); }
+    set_by_lua_block $music_marketplace_port { return os.getenv("MUSIC_MARKETPLACE_PORT"); }
 
     listen 443 ssl;
     listen [::]:443 ssl;
     http2 on;
-    server_name music-downloader.justinkonratt.de;
+    server_name music-marketplace.justinkonratt.de;
 
     if ($is_private_ip = false) {
         return 403;
     }
 
-    set $required_role "just-music-downloader-access";
+    set $required_role "just-music-marketplace-access";
     access_by_lua_file /etc/nginx/lua/access.lua;
 
     location / {
-        set $upstream music-downloader:$music_downloader_port;
+        set $upstream music-marketplace:$music_marketplace_port;
         proxy_pass http://$upstream;
     }
 }
