feat(just-music-marketplace): add more functionalities

--- a/packages/just/nginx/conf/default.conf
+++ b/packages/just/nginx/conf/default.conf
@@ -269,7 +269,7 @@ server {
     }
 
     set $required_role "just-music-marketplace-access";
-    access_by_lua_file /etc/nginx/lua/access.lua;
+    access_by_lua_file /etc/nginx/lua/music-marketplace-access.lua;
 
     location / {
         set $upstream music-marketplace:$music_marketplace_port;
