--- a/packages/just/nginx/envs.conf
+++ b/packages/just/nginx/envs.conf
@@ -29,7 +29,7 @@ env MAIL_HTTP_PORT;
 env MLFLOW_PORT;
 env MLFLOW_API_KEY;
 
-env MUSIC_DOWNLOADER_PORT;
+env MUSIC_MARKETPLACE_PORT;
 
 env MUSIC_METADATA_PORT;
 
