--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,6 +42,9 @@
             "@cdw/monorepo/shared-svelte-components": [
                 "packages/shared/svelte/components/src/index.ts"
             ],
+            "@cdw/monorepo/shared-svelte-components/*": [
+                "packages/shared/svelte/components/src/*/index.ts"
+            ],
             "@cdw/monorepo/shared-svelte-contexts": [
                 "packages/shared/svelte/contexts/src/index.ts"
             ],
