--- a/packages/just/.env.secure.yaml
+++ b/packages/just/.env.secure.yaml
@@ -10,7 +10,6 @@ env:
   ADMINER_PORT: 8080
   DOCKER_REGISTRY_PORT: 5005
   DOCUMENTATION_PORT: 80
-  MUSIC_DOWNLOADER_PORT: 4200
   NETDATA_PORT: 19999
   PORTAINER_PORT: 9000
   PROMETHEUS_PORT: 9090
@@ -174,6 +173,12 @@ secrets:
     vars:
       - DIR_PATH
       - LIBRARY_PATH
+
+  music/marketplace:
+    prefix: true
+    vars:
+      - PORT
+      - CMS_TOKEN
 
   music/platform:
     prefix: true
