--- a/packages/just/docker-compose.yaml
+++ b/packages/just/docker-compose.yaml
@@ -418,6 +418,19 @@ services:
     volumes:
       - mlflow-artifacts:/mlflow/artifacts
 
+  music-marketplace:
+    <<: *common
+    environment:
+      PORT: ${MUSIC_MARKETPLACE_PORT}
+      STORE_DIR: ${MUSIC_STORE_STORE_DIR}
+      LIBS_DIR: ${MUSIC_STORE_LIBS_DIR}
+      LIBS: ${MUSIC_STORE_LIBS}
+      CMS_URL: ${CMS_URL}
+      CMS_TOKEN: ${MUSIC_MARKETPLACE_CMS_TOKEN}
+    image: ${IMAGE_BASE}/just-music-marketplace:${PROJECT_VERSION:-latest}
+    volumes:
+      - ${MUSIC_DIR_PATH}:/music
+
   music-metadata:
     <<: *common
     environment:
