--- a/packages/just/nginx/conf/default.conf
+++ b/packages/just/nginx/conf/default.conf
@@ -271,6 +271,10 @@ server {
     set $required_role "just-music-marketplace-access";
     access_by_lua_file /etc/nginx/lua/music-marketplace-access.lua;
 
+    location /callback-auth {
+        access_by_lua_file /etc/nginx/lua/music-marketplace-access.lua;
+    }
+
     location / {
         set $upstream music-marketplace:$music_marketplace_port;
         proxy_pass http://$upstream;
