--- a/packages/just/music/store/project.json
+++ b/packages/just/music/store/project.json
@@ -3,7 +3,7 @@
     "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
     "sourceRoot": "packages/just/music/store/src",
     "projectType": "application",
-    "tags": ["app"],
+    "tags": ["just-music-store"],
     "targets": {
         "build": {
             "executor": "@nx/esbuild:esbuild",
