feat(just-food): setup project and add bls 4.0 data

--- a/packages/just/website/package.json
+++ b/packages/just/website/package.json
@@ -2,8 +2,5 @@
     "name": "just-website",
     "type": "module",
     "private": true,
-    "description": "This app contains my personal website",
-    "imports": {
-        "#app.css": "./src/app.css"
-    }
+    "description": "This app contains my personal website"
 }
