--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
         "clsx": "^2.1.1",
         "color": "^5.0.3",
         "dotenv": "^17.2.3",
+        "hyparquet": "^1.24.0",
+        "hyparquet-compressors": "^1.1.1",
         "iconify-icon": "3.0.2",
         "leaflet": "^1.9.4",
         "mermaid": "~11.12.2",
