--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "nodemailer": "^7.0.12",
         "pino": "^10.2.1",
         "sveaflet": "^0.1.4",
+        "tailwind-scrollbar-hide": "^4.0.0",
         "tslib": "^2.8.1",
         "uuid": "^13.0.0",
         "vite-plugin-web-extension": "^4.5.0",
