--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,6 +40,7 @@
             "@cdw/monorepo/shared-directus": ["packages/shared/directus/src/index.ts"],
             "@cdw/monorepo/shared-graphql": ["packages/shared/graphql/src/index.ts"],
             "@cdw/monorepo/shared-logging": ["packages/shared/logging/src/index.ts"],
+            "@cdw/monorepo/shared-svelte-actions": ["packages/shared/svelte/actions/src/index.ts"],
             "@cdw/monorepo/shared-svelte-components": [
                 "packages/shared/svelte/components/src/index.ts"
             ],
