--- a/.prettierrc
+++ b/.prettierrc
@@ -22,13 +22,7 @@
             "options": {
                 "embeddedLanguageFormatting": "off"
             }
-        },
-        {
-            "files": "*.astro",
-            "options": {
-                "parser": "astro"
-            }
         }
     ],
-    "plugins": ["prettier-plugin-tailwindcss", "prettier-plugin-astro"]
+    "plugins": ["prettier-plugin-tailwindcss"]
 }
