fix(just-music-metadata): add rights to rename files

--- a/packages/just/docker-compose.yaml
+++ b/packages/just/docker-compose.yaml
@@ -433,6 +433,8 @@ services:
 
   music-metadata:
     <<: *common
+    cap_add:
+      - CAP_DAC_OVERRIDE
     environment:
       - PORT=${MUSIC_METADATA_PORT}
     healthcheck:
