refactor(just): add shared layout and button components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,12 @@
             "@cdw/monorepo/just-branding/*": ["packages/just/branding/*"],
             "@cdw/monorepo/just-cms-types": ["packages/just/cms/types/src/index.ts"],
             "@cdw/monorepo/just-music-utils": ["packages/just/music/utils/src/index.ts"],
+            "@cdw/monorepo/just-shared-svelte-components": [
+                "packages/just/shared/svelte/components/src/index.ts"
+            ],
+            "@cdw/monorepo/just-shared-svelte-components/*": [
+                "packages/just/shared/svelte/components/src/*/index.ts"
+            ],
             "@cdw/monorepo/nx-plugins-ci": ["packages/nx-plugins/ci/src/index.ts"],
             "@cdw/monorepo/nx-plugins-codegen": ["packages/nx-plugins/codegen/src/index.ts"],
             "@cdw/monorepo/nx-plugins-directus-extensions": [
