fix(just-nginx): ssl stapling and bitwarden body size

--- a/packages/just/nginx/conf/default.conf
+++ b/packages/just/nginx/conf/default.conf
@@ -61,6 +61,7 @@ server {
     http2 on;
     server_name bitwarden.justinkonratt.de;
 
+    client_max_body_size 100M;
     location / {
         set $upstream bitwarden:$bitwarden_port;
         proxy_pass http://$upstream;
