feat(just-food): add draft for lookup page

--- a/packages/just/food/.env.secure.yaml
+++ b/packages/just/food/.env.secure.yaml
@@ -9,15 +9,8 @@ secrets:
     vars:
       - URL
 
-  ../website:
+  index:
     vars:
       - CMS_TOKEN
       - PORT
-
-  ../smtp:
-    prefix: true
-    vars:
-      - USERNAME
-      - PASSWORD
-      - HOST
-      - PORT
+      - DEV_USER_EMAIL
