--- a/packages/zinzow/website/tsconfig.json
+++ b/packages/zinzow/website/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "extends": "../../../tsconfig.json",
     "compilerOptions": {
-        "rootDirs": [".", ".svelte-kit/types"],
+        "rootDirs": [".", ".svelte-kit/types/packages/zinzow/website"],
         "types": ["svelte", "node", "vite/client"],
         "strictNullChecks": false,
         "strictPropertyInitialization": false
