--- a/packages/just/music/marketplace/tsconfig.json
+++ b/packages/just/music/marketplace/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "extends": "../../../../tsconfig.json",
     "compilerOptions": {
-        "rootDirs": [".", ".svelte-kit/types/packages/just/music/marketplace"],
+        "rootDirs": [".", ".svelte-kit/types"],
         "types": ["svelte", "node", "vite/client"]
     },
     "include": [
