refactor: replace @iconify/svelte by @iconify/tailwind

--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
         "@graphql-codegen/plugin-helpers": "^6.1.0",
         "@graphql-codegen/typescript": "^5.0.7",
         "@graphql-codegen/typescript-operations": "^5.0.7",
-        "@iconify/svelte": "5.2.1",
+        "@iconify/json": "^2.2.437",
+        "@iconify/tailwind4": "^1.2.1",
         "@nx/devkit": "22.4.5",
         "@nx/esbuild": "22.4.5",
         "@nx/eslint": "22.4.5",
