chore(deps): add nx go plugin

--- a/nx.json
+++ b/nx.json
@@ -91,6 +91,16 @@
         },
         {
             "plugin": "@nx/vitest"
+        },
+        {
+            "plugin": "@naxodev/gonx",
+            "options": {
+                "buildTargetName": "build",
+                "serveTargetName": "serve",
+                "testTargetName": "test",
+                "lintTargetName": "lint",
+                "tidyTargetName": "tidy"
+            }
         }
     ],
     "pluginsConfig": {
