feat(just-nginx): add go project to create nginx config

--- a/packages/just/nginx/project.json
+++ b/packages/just/nginx/project.json
@@ -4,5 +4,6 @@
     "sourceRoot": "packages/just/nginx",
     "projectType": "application",
     "targets": {},
-    "tags": []
+    "tags": [],
+    "implicitDependencies": ["just-nginx-config-creator"]
 }
