--- a/packages/just/docker-compose.yaml
+++ b/packages/just/docker-compose.yaml
@@ -110,6 +110,11 @@ services:
           "${STACK_NAME}_vpn-data:/data/services/vpn/data:ro"
         ]
 
+      ofelia.job-run.docker-clean.command: docker image prune -af
+      ofelia.job-run.docker-clean.image: docker:29.2.1-alpine3.23
+      ofelia.job-run.docker-clean.schedule: "@every 8h"
+      ofelia.job-run.docker-clean.volume: "//var/run/docker.sock:/var/run/docker.sock:ro"
+
       ofelia.job-run.forget-backup.command:
         --verbose forget --prune --keep-daily 7 --keep-weekly 4 --keep-monthly 3
       ofelia.job-run.forget-backup.environment: |-
@@ -278,10 +283,6 @@ services:
       - CI_SERVER_URL=http://gitlab
       - CI_SERVER_TOKEN=${GITLAB_RUNNER_TOKEN}
     image: ${DOCKER_PROXY}/gitlab/gitlab-runner:v18.7.1
-    labels:
-      ofelia.enabled: true
-      ofelia.job-exec.docker-clean.schedule: 0 0 2 * * *
-      ofelia.job-exec.docker-clean.command: docker image prune -af
     volumes:
       - //var/run/docker.sock:/var/run/docker.sock
 
