--- a/packages/just/nginx/Dockerfile
+++ b/packages/just/nginx/Dockerfile
@@ -1,17 +1,10 @@
-ARG DOCKER_PROXY
+ARG IMAGE_BASE
+ARG PROJECT_VERSION
 
-FROM $DOCKER_PROXY/openresty/openresty:1.27.1.2-5-alpine-fat
 ARG APP_DIR=just/nginx
 
-RUN mkdir /var/log/nginx
 
-RUN apk add --no-cache openssl-dev git gcc
-RUN luarocks install lua-resty-openidc 1.8.0
+FROM $IMAGE_BASE/shared-nginx:$PROJECT_VERSION
+ARG APP_DIR
 
-WORKDIR /etc/nginx
-COPY ./packages/$APP_DIR/conf conf.d
-COPY ./packages/$APP_DIR/lua lua
-
-WORKDIR /usr/local/openresty/nginx/conf
-COPY ./packages/$APP_DIR/envs.conf .
-RUN echo "include envs.conf;" | cat - nginx.conf > nginx_new.conf && mv nginx_new.conf nginx.conf
+COPY ./packages/$APP_DIR/lua/* lua/
