--- a/packages/shared/nginx/conf/config.conf
+++ b/packages/shared/nginx/conf/config.conf
@@ -2,3 +2,9 @@ lua_package_path "/etc/nginx/lua/?.lua;;";
 
 variables_hash_max_size 2024;
 variables_hash_bucket_size 128;
+
+server {
+	listen 80;
+	listen [::]:80;
+    return 301 https://$host$request_uri;
+}
