--- a/packages/shared/nginx/conf/proxy-headers.conf
+++ b/packages/shared/nginx/conf/proxy-headers.conf
@@ -4,7 +4,7 @@ map $http_upgrade $connection_upgrade_keepalive {
     ''      '';
 }
 
-proxy_set_header Host $http_host;
+proxy_set_header Host $host;
 proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 proxy_set_header X-Forwarded-Proto $scheme;
@@ -13,6 +13,5 @@ proxy_set_header X-Forwarded-Host $http_host;
 proxy_set_header Upgrade $http_upgrade;
 proxy_set_header Connection $connection_upgrade_keepalive;
 
-proxy_buffers 4 512k;
-proxy_buffer_size 256k;
+proxy_buffers 8 512k;
 proxy_busy_buffers_size 512k;
